--- a/WeatherApp/Modules/WeatherModule/Views/WeatherView.xaml
+++ b/WeatherApp/Modules/WeatherModule/Views/WeatherView.xaml
@@ -1,11 +1,10 @@
-﻿<UserControl x:Class="WpfApplication1.Views.WeatherView"
+﻿<UserControl x:Class="WeatherModule.Views.WeatherView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApplication1.Views"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
-             xmlns:converters="clr-namespace:WpfApplication1.Converters"
+             xmlns:converters="clr-namespace:WeatherModule.Converters"
              mc:Ignorable="d" 
              mvvm:ViewModelLocator.AutoWireViewModel="True" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -26,7 +25,7 @@
             <Button Content="Show" 
                     Margin="10 0 10 0"
                     Command="{Binding LoadWeatherCommand}" />
-            <TextBox Text="{Binding City, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="100"></TextBox>
+            <TextBox Text="{Binding City, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="100"/>
         </StackPanel>
 
         <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
