--- a/WeatherApp/Modules/WeatherModule/Themes/GenericDictionary.xaml
+++ b/WeatherApp/Modules/WeatherModule/Themes/GenericDictionary.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../Resources.xaml"/>
+        <ResourceDictionary Source="ResourcesDictionary.xaml"/>
         <ResourceDictionary Source="Converters.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
