--- a/WeatherApp/HelloWorld/Views/MainWindow.xaml
+++ b/WeatherApp/HelloWorld/Views/MainWindow.xaml
@@ -2,9 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
-        Title="MainWindow" Height="350" Width="525">
+        WindowStyle="SingleBorderWindow"
+        WindowState="Normal"
+        Icon="../Assets/Icon.png"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        
+        Height="350" Width="525">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
@@ -12,10 +19,14 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <ContentControl Grid.Row="0" Grid.Column="0"
-            prism:RegionManager.RegionName="MainRegion" />
 
-        <ContentControl Grid.Row="0" Grid.Column="1" 
-            prism:RegionManager.RegionName="SecondaryRegion" />
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+            prism:RegionManager.RegionName="HeaderRegion" Padding="10" />
+
+        <ContentControl Grid.Row="1" Grid.Column="0"
+            prism:RegionManager.RegionName="MainRegion" Padding="10"/>
+
+        <ContentControl Grid.Row="1" Grid.Column="1" 
+            prism:RegionManager.RegionName="SecondaryRegion" Padding="10"/>
     </Grid>
 </Window>
