--- a/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
+++ b/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="ModuleA.Views.RecentCitiesView"
+﻿<UserControl x:Class="WeatherModule.Views.RecentCitiesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
+             xmlns:dto="clr-namespace:Services.DTO;assembly=Services"
              mc:Ignorable="d" 
              mvvm:ViewModelLocator.AutoWireViewModel="True" 
              d:DesignHeight="300" d:DesignWidth="300">
@@ -12,13 +13,15 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <TextBlock Grid.Row="0" HorizontalAlignment="Center"> Recent cities</TextBlock>
-        
-        <ListView ItemsSource="{Binding RecentCities}" Grid.Row="1">
+
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" Margin="0 10 0 10">Recent cities</TextBlock>
+
+        <ListView ItemsSource="{Binding RecentCities}" Grid.Row="1" BorderThickness="0">
             <ListView.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding}"/>
+                <DataTemplate DataType="dto:CityItem">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding CityName}"/>
+                    </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
