--- a/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
+++ b/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
@@ -8,19 +8,27 @@
              mc:Ignorable="d" 
              mvvm:ViewModelLocator.AutoWireViewModel="True" 
              d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ResourceDictionary Source="../Themes/GenericDictionary.xaml"/>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" HorizontalAlignment="Center" Margin="0 10 0 10">Recent cities</TextBlock>
+        <TextBlock Grid.Row="0" 
+                   Style="{StaticResource CaptionTextBlockStyle}"
+                   FontWeight="Bold"
+                   HorizontalAlignment="Center" Margin="0 10 0 10">Recent cities</TextBlock>
 
         <ListView ItemsSource="{Binding RecentCities}" Grid.Row="1" BorderThickness="0">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="dto:CityItem">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding CityName}"/>
+                        
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
