--- a/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
+++ b/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
@@ -23,13 +23,15 @@
                    FontWeight="Bold"
                    HorizontalAlignment="Center" Margin="0 10 0 10">Recent cities</TextBlock>
 
-        <ListView ItemsSource="{Binding RecentCities}" Grid.Row="1" BorderThickness="0">
+        <ListView Grid.Row="1" 
+                  ItemsSource="{Binding RecentCities}" 
+                  SelectedItem="{Binding RecentCitySelected, Mode=TwoWay}"
+                  BorderThickness="0">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="dto:CityItem">
-                    <StackPanel Orientation="Horizontal">
+                    <Grid>
                         <TextBlock Text="{Binding CityName}"/>
-                        
-                    </StackPanel>
+                    </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
