Move core functionality to portable library

--- a/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
+++ b/WeatherApp/Modules/WeatherModule/Views/RecentCitiesView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mvvm="http://prismlibrary.com/"
-             xmlns:dto="clr-namespace:Services.DTO;assembly=Services"
+             xmlns:dto="clr-namespace:Services.Portable.DTO;assembly=Services.Portable"
              mc:Ignorable="d" 
              mvvm:ViewModelLocator.AutoWireViewModel="True" 
              d:DesignHeight="300" d:DesignWidth="300">
