--- a/WeatherApp/HelloWorld/App.xaml
+++ b/WeatherApp/HelloWorld/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="HelloWorld.App"
+﻿<Application x:Class="Weather.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HelloWorld">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
          
     </Application.Resources>
