--- a/WeatherApp/HelloWorld/Views/MainWindow.xaml
+++ b/WeatherApp/HelloWorld/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HelloWorld.Views.MainWindow"
+﻿<Window x:Class="Weather.App.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:prism="http://prismlibrary.com/"
