--- a/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter a city"
+        android:text="Kiev"
+        android:gravity="center"
+        android:id="@+id/editTextCity"
+        android:inputType="text" />
     <Button
         android:id="@+id/MyButton"
         android:layout_width="fill_parent"
@@ -17,6 +25,7 @@
         android:gravity="center" />
     <LinearLayout
         android:orientation="horizontal"
+        android:id="@+id/linearLayoutWeather"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -24,7 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageViewCurrentWeather"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:layout_gravity="center" />
         <TextView xmlns:tools="http://schemas.android.com/tools"
             style="@style/sub_header_text_style"
             android:layout_width="match_parent"
