--- a/WeatherApp/Apps/Weather.Android/Resources/layout/HourlyForecast.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/HourlyForecast.axml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="200dp"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
-    <ImageView
-        android:src="@drawable/weatherstatus200d"
+    android:minHeight="25px"
+    android:layout_width="wrap_content">
+    <TextView
+        android:text="Text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/textViewHour"
+        style="@style/caption_text_block_style" />
+    <ImageView
+        android:src="@drawable/weatherstatus200d"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:id="@+id/imageViewForecastImage" />
+    <TextView
+        android:text="Text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewTemp"
+        style="@style/caption_text_block_style"
+        android:textStyle="bold" />
 </LinearLayout>
