--- a/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
@@ -80,12 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/horizontalScrollHourlyForecast"
-            android:scrollbars="none">
+            android:scrollbars="none"
+            android:layout_gravity="center">
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/linearLayoutHourlyForecast" />
+                android:layout_gravity="center"
+                android:id="@+id/linearLayoutHourlyForecast"
+                android:gravity="center" />
         </HorizontalScrollView>
     </LinearLayout>
     <ProgressBar
