Add experimental features : Drawer and SlidePage, add feature togle for experimental features, reorganize project structure

--- a/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
@@ -101,6 +101,13 @@
                     android:layout_gravity="center"
                     tools:visibility="visible" />
             </HorizontalScrollView>
+            <TextView
+                android:text="Updated right now"
+                style="@style/caption_text_block_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewUpdated"
+                android:gravity="center" />
             <ImageView
                 android:src="@drawable/weatherstatus221d"
                 android:layout_height="wrap_content"
@@ -114,5 +121,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/progressBarLoading" />
+    <!--Test-->
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    <!--Test-->
     </LinearLayout>
 </ScrollView>
