--- a/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
@@ -7,16 +7,20 @@
     android:minWidth="25px"
     tools:context=".MainActivity"
     android:minHeight="25px">
+  <item
+        android:id="@+id/menuItemRefresh"
+        android:icon="@drawable/Refresh"
+        android:showAsAction="ifRoom"
+        android:title="About" />
     <item
         android:id="@+id/menuItemAbout"
         android:icon="@drawable/Info"
-        android:showAsAction="ifRoom|withText"
+        android:showAsAction="ifRoom"
         android:title="About" />
     <item
         android:id="@+id/menuItemDrawerTest"
         android:icon="@drawable/Experimental"
-        android:title="Drawable Test"
-        android:showAsAction="ifRoom|withText" />
+        android:title="Drawable Test"/>
     <item
         android:id="@+id/menuItemSettings"
         android:icon="@drawable/settingsIcon"
