--- a/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
@@ -7,23 +7,29 @@
     android:minWidth="25px"
     tools:context=".MainActivity"
     android:minHeight="25px">
+
   <item
-        android:id="@+id/menuItemRefresh"
-        android:icon="@drawable/Refresh"
-        android:showAsAction="ifRoom"
-        android:title="About" />
-    <item
-        android:id="@+id/menuItemAbout"
-        android:icon="@drawable/Info"
-        android:showAsAction="ifRoom"
-        android:title="About" />
-    <item
-        android:id="@+id/menuItemDrawerTest"
-        android:icon="@drawable/Experimental"
-        android:title="Drawable Test"/>
-    <item
-        android:id="@+id/menuItemSettings"
-        android:icon="@drawable/settingsIcon"
-        android:title="Settings"
-        android:showAsAction="ifRoom" />
+      android:id="@+id/menuItemRefresh"
+      android:icon="@drawable/ic_sync_white_24dp"
+      android:showAsAction="ifRoom"
+      android:title="Refresh" />
+  <item
+      android:id="@+id/menuItemAddCity"
+      android:icon="@drawable/ic_add_white_24dp"
+      android:showAsAction="always"
+      android:title="Add" />
+  <item
+      android:id="@+id/menuItemDrawerTest"
+      android:icon="@drawable/Experimental"
+      android:title="Drawable Test"/>
+  <item
+      android:id="@+id/menuItemSettings"
+      android:icon="@drawable/ic_settings_white_24dp"
+      android:title="Settings"
+      android:showAsAction="ifRoom" />
+<item
+      android:id="@+id/menuItemAbout"
+      android:icon="@drawable/ic_info_white_24dp"
+      android:showAsAction="ifRoom"
+      android:title="About" />
 </menu>
