--- a/WeatherApp/Apps/Weather.Android/Resources/layout/toolbar_actionbar.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/toolbar_actionbar.axml
@@ -1,23 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/lib/res-auto"
     android:id="@+id/toolbar_actionbar"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
-    android:theme="@style/MyTheme.Base"
-    app:popupTheme="@style/MyTheme.Base" 
-    android:background="@color/orange">
-  <LinearLayout
+    android:elevation="4dp"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:background="@color/colorPrimary">
+    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!--<ImageView
-            android:src="@drawable/ic_add_black_24dp"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageViewCurrentWeather"
-            android:scaleType="fitCenter"
-            android:layout_gravity="center" />-->
-    </LinearLayout>
+        android:layout_height="match_parent" />
 </android.support.v7.widget.Toolbar>
