--- a/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/menu/menu.axml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,7 @@
   <item
       android:id="@+id/menuItemRefresh"
       android:icon="@drawable/ic_sync_white_24dp"
-      android:showAsAction="ifRoom"
+      local:showAsAction="ifRoom|collapseActionView"
       android:title="Refresh" />
   <item
       android:id="@+id/menuItemAddCity"
