--- a/WeatherApp/Apps/Weather.Android/Resources/layout/toolbar_actionbar.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/toolbar_actionbar.axml
@@ -7,7 +7,7 @@
     android:elevation="4dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    android:background="@color/colorPrimary">
+    android:background="@color/primary">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
