Refactor project to support material design

--- a/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/Main.axml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbars="none">
-  <!--    <LinearLayout
+<!--    <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -120,13 +120,15 @@
                 tools:visibility="gone"
                 android:layout_width="match_parent" />
         -->
-<!--Test--><!--
+<!--Test-->
+<!--
             <android.support.v4.view.ViewPager
                 android:id="@+id/main_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        --><!--Test-->
-              <!--
+        -->
+<!--Test-->
+<!--
             <TextView
                 android:text="Text behind ViewPager"
                 style="@style/caption_text_block_style"
