--- a/WeatherApp/Apps/Weather.Android/Resources/layout/city_weather_fragment.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/city_weather_fragment.axml
@@ -3,34 +3,37 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:elevation="2dp"
     android:layout_margin="@dimen/md_keylines"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:padding="@dimen/md_keylines"
-    android:layout_height="wrap_content">
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:padding="@dimen/md_keylines"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/textViewCityName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="San Francisco"
-            style="@style/TextViewHeadline" />
-        <TextView
-            android:id="@+id/textViewDateTimeDetails"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textViewCityName"
-            android:text="Mon, 12:30 PM, Mostly sunny"
-            style="@style/TextViewSubhead" />
-        <TextView
-            android:id="@+id/textViewTemperature"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/textViewDateTimeDetails"
-            android:layout_alignParentLeft="true"
-            android:text="23"
-            style="@style/TextViewDisplay4" />
-    </RelativeLayout>
+    android:padding="@dimen/md_keylines">
+  <RelativeLayout android:orientation="horizontal"
+                  android:layout_width="match_parent"
+                  android:padding="@dimen/md_keylines"
+                  android:layout_height="wrap_content">
+    <TextView android:id="@+id/textViewCityName"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="San Francisco"
+              style="@style/TextViewHeadline" />
+    <TextView android:id="@+id/textViewDateTimeDetails"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@id/textViewCityName"
+              android:text="Mon, 12:30 PM, Mostly sunny"
+              style="@style/TextViewSubhead" />
+    <TextView android:id="@+id/textViewTemperature"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@id/textViewDateTimeDetails"
+              android:layout_alignParentLeft="true"
+              android:text="23"
+              style="@style/TextViewDisplay4" />
+    <ImageView android:src="@drawable/weatherstatus200d"
+               android:layout_width="160dp"
+               android:layout_height="wrap_content"
+               android:layout_alignParentRight="true"
+               android:id="@+id/imageViewCurrentWeather"
+               android:scaleType="fitCenter"
+               android:layout_gravity="center" />
+  </RelativeLayout>
 </android.support.v7.widget.CardView>
