--- a/WeatherApp/Apps/Weather.Android/Resources/layout/main_layout.axml
+++ b/WeatherApp/Apps/Weather.Android/Resources/layout/main_layout.axml
@@ -1,124 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/settings_content"
+    android:id="@+id/mainLinearLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
     <include
         layout="@layout/toolbar_actionbar" />
-    <EditText
+    <fragment
+        class="Weather.AndroidApp.Fragments.CityWeatherCardFragment"
+        android:id="@+id/select"
+        android:elevation="2dp"
+        android:layout_margin="@dimen/md_keylines"
+        android:padding="@dimen/md_keylines"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter a city"
-        android:gravity="center"
-        android:id="@+id/editTextCity"/>
-    <Button
-        android:id="@+id/MyButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/Hello"
-        android:shadowColor="#ffe4c4ff" />
-    <Button
-        android:id="@+id/Main_ButtonWeatherInCurrentLocation"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Weather in current location"
-        android:shadowColor="#ffe4c4ff" />
-    <!--style="@style/header_text_style"-->
-    <TextView
-        style="@style/TextViewHeadline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textViewCity"
-        android:gravity="center" />
-    <LinearLayout
-        android:orientation="vertical"
-        android:id="@+id/linearLayoutWeather"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-      <LinearLayout
-          android:orientation="horizontal"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content">
-        <ImageView
-            android:src="@drawable/weatherstatus200d"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".50"
-            android:id="@+id/imageViewCurrentWeather"
-            android:scaleType="fitCenter"
-            android:layout_gravity="center" />
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".50"
-            android:gravity="center">
-          <TextView
-              style="@style/TextViewDisplay3"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center"
-              android:id="@+id/textViewCurrentTemp"
-              android:text="+23º"
-              android:layout_marginBottom="0.0dp"
-              android:layout_gravity="center_vertical" />
-          <TextView
-              style="@style/TextViewDisplay1"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center"
-              android:text="+23.2 ... 25.2º"
-              android:id="@+id/textViewTempRange"
-              android:layout_gravity="center" />
-        </LinearLayout>
-      </LinearLayout>
-      <TextView
-          style="@style/title_text_style"
-          android:text="Weather description"
-          android:id="@+id/textViewDescription" />
-      <HorizontalScrollView
-          android:minWidth="25px"
-          android:minHeight="25px"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@+id/horizontalScrollHourlyForecast"
-          android:scrollbars="none">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:id="@+id/linearLayoutHourlyForecast"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center" />
-      </HorizontalScrollView>
-      <TextView
-          android:text="Updated right now"
-          style="@style/caption_text_block_style"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:id="@+id/textViewUpdated"
-          android:gravity="center" />
-      <!--Test-->
-      <android.support.v4.view.ViewPager
-          android:id="@+id/main_pager"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-      <!--Test-->
-      <TextView
-            android:text="Text behind ViewPager"
-            style="@style/caption_text_block_style"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" />
-    </LinearLayout>
+        android:layout_weight="1" />
     <ProgressBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        style="@style/ProgressBarStyle"
+        android:layout_weight="2"
         android:id="@+id/progressBarLoading" />
-  </LinearLayout>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
